--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,41 @@
 .container {
-    text-align: center;
+    margin: 10px;
+}
+
+.form-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10px;
+}
+
+.input-container {
+    display: flex;
+    margin-top: 5px;
+}
+
+.custom-input {
+    margin: 10px 10px 10px 0;
+    width: 250px;
+}
+
+.input {
+    width: 90%;
+}
+
+.icon {
+    padding-left: 5px;
+    cursor: pointer;
+}
+
+.button {
+    min-width: 70px;
+    min-height: 50px;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-submit {
+    margin-right: 10px;
+    background-color: cornflowerblue;
 }
